--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.4",
     "react": "^19.2.0",
     "react-avatar": "^5.0.4",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
+    "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
